# ml_project

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: task1.py  task1_summary.md  task2.py  task2_summary.md  task3_summary.md  task4.py  task4_summary.md
