[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["zhenchuanwang666 <zhenchuan.wang@shipt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
transformers = "^4.48.3"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
